--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Austriana/table#readme",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "ws": "^8.18.2"
   }
 }
