--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+  "start": "node server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Austriana/table.git"
@@ -20,6 +17,6 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.1",
-    "ws": "^8.18.3"
+    "nodemon": "^3.1.10"
   }
 }
